[package]
name = "csm"
version = "0.1.0"
edition = "2024"

[dependencies]
bzip2 = "0.6.1"
clap = { version = "4.5.50", features = ["derive", "wrap_help"] }
dirs = "6.0.0"
env_logger = "0.11.8"
log = "0.4.28"
reqwest = { version = "0.12.24", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
tar = "0.4.44"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
which = "8.0.0"
